# skogaslider

./: .gitignore  LICENSE  README.md
Firmware/skogaslider-firmware/: CMakeLists.txt  config.h  main.cpp  skogaslider-firmware.cpp
Firmware/skogaslider-firmware/leds/: LedController.cpp  LedController.h  led_controller.cpp  led_controller.h
Firmware/skogaslider-firmware/lib/PicoLED/: CMakeLists.txt  PicoLed.cmake  PicoLedController.cpp  PicoLedController.hpp  PicoLedTarget.cpp
Firmware/skogaslider-firmware/sega_hardware/led_board/: protocol.h  sega_led_board.cpp  sega_led_board.h
Firmware/skogaslider-firmware/sega_hardware/serial/: sega_serial_reader.cpp  sega_serial_reader.h
Firmware/skogaslider-firmware/sega_hardware/slider/: protocol.h  sega_slider.cpp  sega_slider.h
Firmware/skogaslider-firmware/slider/: TouchSlider.cpp  TouchSlider.h  touch_slider.cpp  touch_slider.h
Firmware/skogaslider-firmware/slider/mpr121/: Mpr121.cpp  Mpr121.h
Firmware/skogaslider-firmware/tinyusb/: tusb_config.h  usb_descriptors.c
Firmware/skogaslider-firmware/usb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
Firmware/skogaslider-firmware/usb_output/: usb_output.cpp  usb_output.h
KiCAD Projects/skogaslider-main-pcb/: Skogaslider_Custom_Symbols.kicad_sym  TS-1187A-B-A-B.dcm  TS-1187A-B-A-B.lib  fp-lib-table  skogaslider-main-pcb.kicad_pcb  skogaslider-main-pcb.kicad_prl  skogaslider-main-pcb.kicad_pro  skogaslider-main-pcb.kicad_sch  skogaslider-main-pcb.step  sym-lib-table
KiCAD Projects/skogaslider-main-pcb/Skogaslider_Custom_Footprints.pretty/: HDMI_Connector_SMD.kicad_mod  skogacons_logo.kicad_mod
KiCAD Projects/skogaslider-main-pcb/TS-1187A-B-A-B.pretty/: SW_TS-1187A-B-A-B.kicad_mod  TS-1187A-B-A-B.mod
KiCAD Projects/skogaslider-main-pcb/TouchPad.pretty/: Pads.kicad_mod
KiCAD Projects/skogaslider-main-pcb/WS2812B-4020.pretty/: WS2812B-4020.kicad_mod
KiCAD Projects/skogaslider-main-pcb/jlcpcb/: project.db
KiCAD Projects/skogaslider-main-pcb/jlcpcb/gerber/: skogaslider-main-pcb-CuBottom.gbr  skogaslider-main-pcb-CuTop.gbr  skogaslider-main-pcb-EdgeCuts.gbr  skogaslider-main-pcb-MaskBottom.gbr  skogaslider-main-pcb-MaskTop.gbr  skogaslider-main-pcb-NPTH.drl  skogaslider-main-pcb-PTH.drl  skogaslider-main-pcb-PasteBottom.gbr  skogaslider-main-pcb-PasteTop.gbr  skogaslider-main-pcb-SilkBottom.gbr  skogaslider-main-pcb-SilkTop.gbr  skogaslider-main-pcb-VScore.gbr
